# Prust

./: .gitignore  Cargo.toml  README.md  list_funcs.py  log.md  memory.x  openocd.cfg  openocd.gdb  packet.txt  readme.md
.cargo/: config
.github/: contributing.md
.github/workflows/: rust.yml
client/: Cargo.toml  out.txt
client/.cargo/: config
client/src/: main.rs
prust-embedded/: README.md
pus/: Cargo.toml
pus/.cargo/: config
pus/src/: error.rs  lib.rs  sp.rs
pus/src/sp/: services.rs  tc.rs  tests.rs  tm.rs
pus/src/sp/services/: service_1.rs  service_3.rs  service_8.rs
pus/src/sp/services/service_1/: service_fail.rs  service_fail_step.rs  service_success.rs  service_success_step.rs
pus/src/sp/services/service_3/: service_3_1.rs  service_3_25.rs  service_3_27.rs  service_3_5.rs  service_3_5x6.rs  service_3_6.rs
pus/src/sp/tc/: service_8.rs
pus/src/sp/tm/: service_1.rs
pus/src/sp/tm/service_1/: service_fail.rs  service_fail_step.rs  service_success_step.rs
spp/: Cargo.toml
spp/src/: lib.rs
src/: error.rs  lib.rs  main.rs  packet_parser.rs  server.rs  sp.rs
src/server/: func_man.rs  utils.rs
src/server/func_man/: functions.rs
src/sp/: services.rs  tc.rs  tests.rs
src/sp/services/: service_1.rs  service_8.rs
src/sp/services/service_1/: service_fail.rs  service_fail_step.rs
src/sp/services/service_3/: service_3_1.rs  service_3_27.rs
st_scripts/board/: stm32_st_board.vm
st_scripts/interface/: stlink-dap.cfg  stlink.cfg
