[package]
name = "prust"
version = "0.1.0"
authors = ["Selman Özleyen <32667648+SelmanOzleyen@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = ["spp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0  
debug = true

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

[dependencies]
rand = "0.6.0"
spp = { path = "./spp"}

