[package]
name = "prust"
version = "0.1.0"
authors = ["Selman Özleyen <32667648+SelmanOzleyen@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"

[workspace]
members = ["spp"]
exclude = ["prust-embedded"]

[profile.dev]
opt-level = 0  
debug = true

# The release profile, used for `cargo build --release`
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
# panic-semihosting = "0.5.3" # when debugging
stm32l4xx-hal = { version = "0.5.0", features = ["rt","stm32l4x6"]}
nb = "1.0.0"
heapless = "0.5.5"
byteorder = {version = "1.3.4",default-features = false }
arrayvec = {version ="0.5.1",default-features = false}
libc_alloc = "1.0.2"
alloc-cortex-m = "0.4.0"
spp = { path = "./spp"}

