[package]
name = "prust"
version = "0.1.0"
authors = ["Selman Özleyen <32667648+SelmanOzleyen@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"

[workspace]
members = ["pus"]
exclude = ["prust-embedded","client"]


[profile.dev]
opt-level = 0  
debug = true

# The release profile, used for `cargo build --release`
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
stm32l4xx-hal = {git  = "https://github.com/SelmanOzleyen/stm32l4xx-hal",features = ["rt","stm32l4x6"]}
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.5.3" # when debugging
nb = "1.0.0"
heapless = "0.5.5"
byteorder = {version = "1.3.4",default-features = false }
arrayvec = {version ="0.5.1",default-features = false}
alloc-cortex-m = "0.4.0"
hashbrown = "0.8.2"
pus = { path = "./pus"}